<resources>
    <string name="app_name">IBTHA</string>
    <string name="default_description">default</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_welcome">Log In</string>
    <string name="sign_in">Sign In to continue</string>
    <string name="email_login_hint">Email/Phone</string>
    <string name="email_sign_up_hint">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="go_login">GO</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_user">Already Have An Account? Log In</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="google_login">Log In With GOOGLE</string>
    <string name="google_sign_up">Sign Up With GOOGLE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="log_in_continue">Log In Continue!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_continue">Sign up to Continue!</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="your_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login">Login</string>
    <string name="main_page_selected">%s page is selected</string>
    <string name="unit_gm">100gr</string>
    <string name="_1">1</string>
    <string name="tea">Tea</string>
    <string name="_00">00</string>
    <string name="no_description_available">No description Available</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_0">Total(0)</string>
    <string name="my_cart">My Cart</string>
    <string name="name">name</string>
    <string name="log_out">Log Out</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_address_details">Enter Address Details</string>
    <string name="address_long">We will deliver your order to your home address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="submit">submit</string>
    <string name="house_number_floor">House Number , Building name , Floor</string>
    <string name="street_name">Street Name, Area, Colony</string>
    <string name="pin">700049</string>
    <string name="pin2">700050</string>
    <string name="pin3">700060</string>
    <string name="enter_pin_code">Enter PIN code</string>
    <string name="checkout">CheckOut</string>
    <string name="sub_total_price">Sub-total Price</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total_price">Total Price</string>
    <string name="total_items">Total Items</string>
    <string name="loading">Loading..</string>
</resources>