<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/checkout_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="start"
                android:padding="10sp"
                android:text="@string/total_items"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_checkout"
                style="@style/text_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/nunito"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/loading"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/nunito"
                android:gravity="start"
                android:padding="10sp"
                android:text="@string/sub_total_price"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sub_total_checkout"
                style="@style/text_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/nunito"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/loading"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="start"
                android:padding="10sp"
                android:text="@string/delivery_fee"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/delivery_fee_checkout"
                style="@style/text_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/nunito"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/loading"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="start"
                android:padding="10sp"
                android:text="@string/total_price"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/total_price_checkout"
                style="@style/text_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/nunito"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/loading"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>