<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/product_img_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/default_description"
                    tools:srcCompat="?attr/scrimBackground" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/product_name_search"
                style="@style/text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito"
                android:padding="2dp"
                android:text="@string/tea"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardView4"
                app:layout_constraintTop_toTopOf="@+id/cardView4" />

            <TextView
                android:id="@+id/product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/unit_gm"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/product_name_search"
                app:layout_constraintTop_toBottomOf="@+id/product_name_search" />

            <TextView
                android:id="@+id/product_price_search"
                style="@style/text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/default_description"
                app:layout_constraintStart_toStartOf="@+id/product_name_search"
                app:layout_constraintTop_toBottomOf="@+id/product_quantity"
                app:srcCompat="@drawable/rupee"
                app:tint="?attr/actionMenuTextColor" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>